--- a/src/util/struct_array_layout.js.ejs
+++ b/src/util/struct_array_layout.js.ejs
@@ -59,13 +59,13 @@ for (const member of members) {
     }
 }
 -%>
-    emplaceBack(<%=argNamesTyped.join(', ')%>) {
+    public emplaceBack(<%=argNamesTyped.join(', ')%>) {
         const i = this.length;
         this.resize(i + 1);
         return this.emplace(i, <%=argNames.join(', ')%>);
     }
 
-    emplace(i: number, <%=argNamesTyped.join(', ')%>) {
+    public emplace(i: number, <%=argNamesTyped.join(', ')%>) {
 <%
 {
 for (const size of usedTypeSizes) {
