lint function-url-quotes/

--- a/src/css/maplibre-gl.css
+++ b/src/css/maplibre-gl.css
@@ -298,7 +298,7 @@
 @media (-ms-high-contrast: active) {
     .maplibregl-ctrl button.maplibregl-ctrl-compass .maplibregl-ctrl-icon,
     .mapboxgl-ctrl button.mapboxgl-ctrl-compass .mapboxgl-ctrl-icon {
-        @svg-load ctrl-compass-white url(svg/maplibregl-ctrl-compass.svg) {
+        @svg-load ctrl-compass-white url("svg/maplibregl-ctrl-compass.svg") {
             fill: #fff;
             #south { fill: #999; }
         }
@@ -314,53 +314,53 @@
     }
 }
 
-@svg-load ctrl-geolocate url(svg/maplibregl-ctrl-geolocate.svg) {
+@svg-load ctrl-geolocate url("svg/maplibregl-ctrl-geolocate.svg") {
     fill: #333;
     #stroke { display: none; }
 }
 
-@svg-load ctrl-geolocate-white url(svg/maplibregl-ctrl-geolocate.svg) {
+@svg-load ctrl-geolocate-white url("svg/maplibregl-ctrl-geolocate.svg") {
     fill: #fff;
     #stroke { display: none; }
 }
 
-@svg-load ctrl-geolocate-black url(svg/maplibregl-ctrl-geolocate.svg) {
+@svg-load ctrl-geolocate-black url("svg/maplibregl-ctrl-geolocate.svg") {
     fill: #000;
     #stroke { display: none; }
 }
 
-@svg-load ctrl-geolocate-disabled url(svg/maplibregl-ctrl-geolocate.svg) {
+@svg-load ctrl-geolocate-disabled url("svg/maplibregl-ctrl-geolocate.svg") {
     fill: #aaa;
     #stroke { fill: #f00; }
 }
 
-@svg-load ctrl-geolocate-disabled-white url(svg/maplibregl-ctrl-geolocate.svg) {
+@svg-load ctrl-geolocate-disabled-white url("svg/maplibregl-ctrl-geolocate.svg") {
     fill: #999;
     #stroke { fill: #f00; }
 }
 
-@svg-load ctrl-geolocate-disabled-black url(svg/maplibregl-ctrl-geolocate.svg) {
+@svg-load ctrl-geolocate-disabled-black url("svg/maplibregl-ctrl-geolocate.svg") {
     fill: #666;
     #stroke { fill: #f00; }
 }
 
-@svg-load ctrl-geolocate-active url(svg/maplibregl-ctrl-geolocate.svg) {
+@svg-load ctrl-geolocate-active url("svg/maplibregl-ctrl-geolocate.svg") {
     fill: #33b5e5;
     #stroke { display: none; }
 }
 
-@svg-load ctrl-geolocate-active-error url(svg/maplibregl-ctrl-geolocate.svg) {
+@svg-load ctrl-geolocate-active-error url("svg/maplibregl-ctrl-geolocate.svg") {
     fill: #e58978;
     #stroke { display: none; }
 }
 
-@svg-load ctrl-geolocate-background url(svg/maplibregl-ctrl-geolocate.svg) {
+@svg-load ctrl-geolocate-background url("svg/maplibregl-ctrl-geolocate.svg") {
     fill: #33b5e5;
     #stroke { display: none; }
     #dot { display: none; }
 }
 
-@svg-load ctrl-geolocate-background-error url(svg/maplibregl-ctrl-geolocate.svg) {
+@svg-load ctrl-geolocate-background-error url("svg/maplibregl-ctrl-geolocate.svg") {
     fill: #e54e33;
     #stroke { display: none; }
     #dot { display: none; }
@@ -494,7 +494,7 @@ a.mapboxgl-ctrl-logo.mapboxgl-compact {
 @media (-ms-high-contrast: active) {
     a.maplibregl-ctrl-logo,
     a.mapboxgl-ctrl-logo {
-        @svg-load ctrl-logo-white url(svg/maplibregl-ctrl-logo.svg) {
+        @svg-load ctrl-logo-white url("svg/maplibregl-ctrl-logo.svg") {
             #outline { opacity: 1; }
             #fill { opacity: 1; }
         }
@@ -507,7 +507,7 @@ a.mapboxgl-ctrl-logo.mapboxgl-compact {
 @media (-ms-high-contrast: black-on-white) {
     a.maplibregl-ctrl-logo,
     a.mapboxgl-ctrl-logo {
-        @svg-load ctrl-logo-black url(svg/maplibregl-ctrl-logo.svg) {
+        @svg-load ctrl-logo-black url("svg/maplibregl-ctrl-logo.svg") {
             #outline { opacity: 1; fill: #fff; stroke: #fff; }
             #fill { opacity: 1; fill: #000; }
         }
