--- a/src/css/maplibre-gl.css
+++ b/src/css/maplibre-gl.css
@@ -13,8 +13,8 @@
     top: 0;
 }
 
-.maplibregl-map:-webkit-full-screen,
-.mapboxgl-map:-webkit-full-screen {
+.maplibregl-map:fullscreen,
+.mapboxgl-map:fullscreen {
     width: 100%;
     height: 100%;
 }
@@ -23,8 +23,6 @@
 .maplibregl-ctrl-group button.maplibregl-ctrl-compass,
 .mapboxgl-canvas-container.mapboxgl-interactive,
 .mapboxgl-ctrl-group button.mapboxgl-ctrl-compass {
-    cursor: -webkit-grab;
-    cursor: -moz-grab;
     cursor: grab;
     -moz-user-select: none;
     -webkit-user-select: none;
@@ -41,8 +39,6 @@
 .maplibregl-ctrl-group button.maplibregl-ctrl-compass:active,
 .mapboxgl-canvas-container.mapboxgl-interactive:active,
 .mapboxgl-ctrl-group button.mapboxgl-ctrl-compass:active {
-    cursor: -webkit-grabbing;
-    cursor: -moz-grabbing;
     cursor: grabbing;
 }
 
@@ -117,8 +113,6 @@
 
 .maplibregl-ctrl-group:not(:empty),
 .mapboxgl-ctrl-group:not(:empty) {
-    -moz-box-shadow: 0 0 2px rgb(0 0 0 / 10%);
-    -webkit-box-shadow: 0 0 2px rgb(0 0 0 / 10%);
     box-shadow: 0 0 0 2px rgb(0 0 0 / 10%);
 }
 
@@ -298,7 +292,7 @@
 @media (-ms-high-contrast: active) {
     .maplibregl-ctrl button.maplibregl-ctrl-compass .maplibregl-ctrl-icon,
     .mapboxgl-ctrl button.mapboxgl-ctrl-compass .mapboxgl-ctrl-icon {
-        @svg-load ctrl-compass-white url(svg/maplibregl-ctrl-compass.svg) {
+        @svg-load ctrl-compass-white url("svg/maplibregl-ctrl-compass.svg") {
             fill: #fff;
             #south { fill: #999; }
         }
@@ -314,12 +308,12 @@
     }
 }
 
-@svg-load ctrl-terrain url(svg/maplibregl-ctrl-terrain.svg) {
+@svg-load ctrl-terrain url("svg/maplibregl-ctrl-terrain.svg") {
     fill: #333;
     #stroke { display: none; }
 }
 
-@svg-load ctrl-terrain-enabled url(svg/maplibregl-ctrl-terrain.svg) {
+@svg-load ctrl-terrain-enabled url("svg/maplibregl-ctrl-terrain.svg") {
     fill: #33b5e5;
     #stroke { display: none; }
 }
@@ -334,53 +328,53 @@
     background-image: svg-inline(ctrl-terrain-enabled);
 }
 
-@svg-load ctrl-geolocate url(svg/maplibregl-ctrl-geolocate.svg) {
+@svg-load ctrl-geolocate url("svg/maplibregl-ctrl-geolocate.svg") {
     fill: #333;
     #stroke { display: none; }
 }
 
-@svg-load ctrl-geolocate-white url(svg/maplibregl-ctrl-geolocate.svg) {
+@svg-load ctrl-geolocate-white url("svg/maplibregl-ctrl-geolocate.svg") {
     fill: #fff;
     #stroke { display: none; }
 }
 
-@svg-load ctrl-geolocate-black url(svg/maplibregl-ctrl-geolocate.svg) {
+@svg-load ctrl-geolocate-black url("svg/maplibregl-ctrl-geolocate.svg") {
     fill: #000;
     #stroke { display: none; }
 }
 
-@svg-load ctrl-geolocate-disabled url(svg/maplibregl-ctrl-geolocate.svg) {
+@svg-load ctrl-geolocate-disabled url("svg/maplibregl-ctrl-geolocate.svg") {
     fill: #aaa;
     #stroke { fill: #f00; }
 }
 
-@svg-load ctrl-geolocate-disabled-white url(svg/maplibregl-ctrl-geolocate.svg) {
+@svg-load ctrl-geolocate-disabled-white url("svg/maplibregl-ctrl-geolocate.svg") {
     fill: #999;
     #stroke { fill: #f00; }
 }
 
-@svg-load ctrl-geolocate-disabled-black url(svg/maplibregl-ctrl-geolocate.svg) {
+@svg-load ctrl-geolocate-disabled-black url("svg/maplibregl-ctrl-geolocate.svg") {
     fill: #666;
     #stroke { fill: #f00; }
 }
 
-@svg-load ctrl-geolocate-active url(svg/maplibregl-ctrl-geolocate.svg) {
+@svg-load ctrl-geolocate-active url("svg/maplibregl-ctrl-geolocate.svg") {
     fill: #33b5e5;
     #stroke { display: none; }
 }
 
-@svg-load ctrl-geolocate-active-error url(svg/maplibregl-ctrl-geolocate.svg) {
+@svg-load ctrl-geolocate-active-error url("svg/maplibregl-ctrl-geolocate.svg") {
     fill: #e58978;
     #stroke { display: none; }
 }
 
-@svg-load ctrl-geolocate-background url(svg/maplibregl-ctrl-geolocate.svg) {
+@svg-load ctrl-geolocate-background url("svg/maplibregl-ctrl-geolocate.svg") {
     fill: #33b5e5;
     #stroke { display: none; }
     #dot { display: none; }
 }
 
-@svg-load ctrl-geolocate-background-error url(svg/maplibregl-ctrl-geolocate.svg) {
+@svg-load ctrl-geolocate-background-error url("svg/maplibregl-ctrl-geolocate.svg") {
     fill: #e54e33;
     #stroke { display: none; }
     #dot { display: none; }
@@ -418,10 +412,6 @@
 
 .maplibregl-ctrl button.maplibregl-ctrl-geolocate.maplibregl-ctrl-geolocate-waiting .maplibregl-ctrl-icon,
 .mapboxgl-ctrl button.mapboxgl-ctrl-geolocate.mapboxgl-ctrl-geolocate-waiting .mapboxgl-ctrl-icon {
-    -webkit-animation: maplibregl-spin 2s infinite linear;
-    -moz-animation: maplibregl-spin 2s infinite linear;
-    -o-animation: maplibregl-spin 2s infinite linear;
-    -ms-animation: maplibregl-spin 2s infinite linear;
     animation: maplibregl-spin 2s infinite linear;
 }
 
@@ -469,24 +459,24 @@
     }
 }
 
-@-webkit-keyframes maplibregl-spin {
-    0% { -webkit-transform: rotate(0deg); }
-    100% { -webkit-transform: rotate(360deg); }
+@keyframes maplibregl-spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
 
-@-moz-keyframes maplibregl-spin {
-    0% { -moz-transform: rotate(0deg); }
-    100% { -moz-transform: rotate(360deg); }
+@keyframes maplibregl-spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
 
-@-o-keyframes maplibregl-spin {
-    0% { -o-transform: rotate(0deg); }
-    100% { -o-transform: rotate(360deg); }
+@keyframes maplibregl-spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
 
-@-ms-keyframes maplibregl-spin {
-    0% { -ms-transform: rotate(0deg); }
-    100% { -ms-transform: rotate(360deg); }
+@keyframes maplibregl-spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
 
 @keyframes maplibregl-spin {
@@ -514,7 +504,7 @@ a.mapboxgl-ctrl-logo.mapboxgl-compact {
 @media (-ms-high-contrast: active) {
     a.maplibregl-ctrl-logo,
     a.mapboxgl-ctrl-logo {
-        @svg-load ctrl-logo-white url(svg/maplibregl-ctrl-logo.svg) {
+        @svg-load ctrl-logo-white url("svg/maplibregl-ctrl-logo.svg") {
             #outline { opacity: 1; }
             #fill { opacity: 1; }
         }
@@ -527,7 +517,7 @@ a.mapboxgl-ctrl-logo.mapboxgl-compact {
 @media (-ms-high-contrast: black-on-white) {
     a.maplibregl-ctrl-logo,
     a.mapboxgl-ctrl-logo {
-        @svg-load ctrl-logo-black url(svg/maplibregl-ctrl-logo.svg) {
+        @svg-load ctrl-logo-black url("svg/maplibregl-ctrl-logo.svg") {
             #outline { opacity: 1; fill: #fff; stroke: #fff; }
             #fill { opacity: 1; fill: #000; }
         }
@@ -682,7 +672,6 @@ a.mapboxgl-ctrl-logo.mapboxgl-compact {
     position: absolute;
     top: 0;
     left: 0;
-    display: -webkit-flex;
     display: flex;
     will-change: transform;
     pointer-events: none;
@@ -694,7 +683,6 @@ a.mapboxgl-ctrl-logo.mapboxgl-compact {
 .mapboxgl-popup-anchor-top,
 .mapboxgl-popup-anchor-top-left,
 .mapboxgl-popup-anchor-top-right {
-    -webkit-flex-direction: column;
     flex-direction: column;
 }
 
@@ -704,19 +692,16 @@ a.mapboxgl-ctrl-logo.mapboxgl-compact {
 .mapboxgl-popup-anchor-bottom,
 .mapboxgl-popup-anchor-bottom-left,
 .mapboxgl-popup-anchor-bottom-right {
-    -webkit-flex-direction: column-reverse;
     flex-direction: column-reverse;
 }
 
 .maplibregl-popup-anchor-left,
 .mapboxgl-popup-anchor-left {
-    -webkit-flex-direction: row;
     flex-direction: row;
 }
 
 .maplibregl-popup-anchor-right,
 .mapboxgl-popup-anchor-right {
-    -webkit-flex-direction: row-reverse;
     flex-direction: row-reverse;
 }
 
@@ -730,7 +715,6 @@ a.mapboxgl-ctrl-logo.mapboxgl-compact {
 
 .maplibregl-popup-anchor-top .maplibregl-popup-tip,
 .mapboxgl-popup-anchor-top .mapboxgl-popup-tip {
-    -webkit-align-self: center;
     align-self: center;
     border-top: none;
     border-bottom-color: #fff;
@@ -738,7 +722,6 @@ a.mapboxgl-ctrl-logo.mapboxgl-compact {
 
 .maplibregl-popup-anchor-top-left .maplibregl-popup-tip,
 .mapboxgl-popup-anchor-top-left .mapboxgl-popup-tip {
-    -webkit-align-self: flex-start;
     align-self: flex-start;
     border-top: none;
     border-left: none;
@@ -747,7 +730,6 @@ a.mapboxgl-ctrl-logo.mapboxgl-compact {
 
 .maplibregl-popup-anchor-top-right .maplibregl-popup-tip,
 .mapboxgl-popup-anchor-top-right .mapboxgl-popup-tip {
-    -webkit-align-self: flex-end;
     align-self: flex-end;
     border-top: none;
     border-right: none;
@@ -756,7 +738,6 @@ a.mapboxgl-ctrl-logo.mapboxgl-compact {
 
 .maplibregl-popup-anchor-bottom .maplibregl-popup-tip,
 .mapboxgl-popup-anchor-bottom .mapboxgl-popup-tip {
-    -webkit-align-self: center;
     align-self: center;
     border-bottom: none;
     border-top-color: #fff;
@@ -764,7 +745,6 @@ a.mapboxgl-ctrl-logo.mapboxgl-compact {
 
 .maplibregl-popup-anchor-bottom-left .maplibregl-popup-tip,
 .mapboxgl-popup-anchor-bottom-left .mapboxgl-popup-tip {
-    -webkit-align-self: flex-start;
     align-self: flex-start;
     border-bottom: none;
     border-left: none;
@@ -773,7 +753,6 @@ a.mapboxgl-ctrl-logo.mapboxgl-compact {
 
 .maplibregl-popup-anchor-bottom-right .maplibregl-popup-tip,
 .mapboxgl-popup-anchor-bottom-right .mapboxgl-popup-tip {
-    -webkit-align-self: flex-end;
     align-self: flex-end;
     border-bottom: none;
     border-right: none;
@@ -782,7 +761,6 @@ a.mapboxgl-ctrl-logo.mapboxgl-compact {
 
 .maplibregl-popup-anchor-left .maplibregl-popup-tip,
 .mapboxgl-popup-anchor-left .mapboxgl-popup-tip {
-    -webkit-align-self: center;
     align-self: center;
     border-left: none;
     border-right-color: #fff;
@@ -790,7 +768,6 @@ a.mapboxgl-ctrl-logo.mapboxgl-compact {
 
 .maplibregl-popup-anchor-right .maplibregl-popup-tip,
 .mapboxgl-popup-anchor-right .mapboxgl-popup-tip {
-    -webkit-align-self: center;
     align-self: center;
     border-right: none;
     border-left-color: #fff;
@@ -887,9 +864,6 @@ a.mapboxgl-ctrl-logo.mapboxgl-compact {
     height: 15px;
     border-radius: 50%;
     position: absolute;
-    -webkit-animation: maplibregl-user-location-dot-pulse 2s infinite;
-    -moz-animation: maplibregl-user-location-dot-pulse 2s infinite;
-    -ms-animation: maplibregl-user-location-dot-pulse 2s infinite;
     animation: maplibregl-user-location-dot-pulse 2s infinite;
 }
 
@@ -907,16 +881,16 @@ a.mapboxgl-ctrl-logo.mapboxgl-compact {
     box-shadow: 0 0 3px rgb(0 0 0 / 35%);
 }
 
-@-webkit-keyframes maplibregl-user-location-dot-pulse {
-    0%   { -webkit-transform: scale(1); opacity: 1; }
-    70%  { -webkit-transform: scale(3); opacity: 0; }
-    100% { -webkit-transform: scale(1); opacity: 0; }
+@keyframes maplibregl-user-location-dot-pulse {
+    0%   { transform: scale(1); opacity: 1; }
+    70%  { transform: scale(3); opacity: 0; }
+    100% { transform: scale(1); opacity: 0; }
 }
 
-@-ms-keyframes maplibregl-user-location-dot-pulse {
-    0%   { -ms-transform: scale(1); opacity: 1; }
-    70%  { -ms-transform: scale(3); opacity: 0; }
-    100% { -ms-transform: scale(1); opacity: 0; }
+@keyframes maplibregl-user-location-dot-pulse {
+    0%   { transform: scale(1); opacity: 1; }
+    70%  { transform: scale(3); opacity: 0; }
+    100% { transform: scale(1); opacity: 0; }
 }
 
 @keyframes maplibregl-user-location-dot-pulse {
