--- a/src/css/maplibre-gl.css
+++ b/src/css/maplibre-gl.css
@@ -308,6 +308,26 @@
     }
 }
 
+@svg-load ctrl-terrain url("svg/maplibregl-ctrl-terrain.svg") {
+    fill: #333;
+    #stroke { display: none; }
+}
+
+@svg-load ctrl-terrain-enabled url("svg/maplibregl-ctrl-terrain.svg") {
+    fill: #33b5e5;
+    #stroke { display: none; }
+}
+
+.maplibregl-ctrl button.maplibregl-ctrl-terrain .maplibregl-ctrl-icon,
+.mapboxgl-ctrl button.mapboxgl-ctrl-terrain .mapboxgl-ctrl-icon {
+    background-image: svg-inline(ctrl-terrain);
+}
+
+.maplibregl-ctrl button.maplibregl-ctrl-terrain-enabled .maplibregl-ctrl-icon,
+.mapboxgl-ctrl button.mapboxgl-ctrl-terrain-enabled .mapboxgl-ctrl-icon {
+    background-image: svg-inline(ctrl-terrain-enabled);
+}
+
 @svg-load ctrl-geolocate url("svg/maplibregl-ctrl-geolocate.svg") {
     fill: #333;
     #stroke { display: none; }
