fix compact attribution style when using windicss

--- a/src/css/maplibre-gl.css
+++ b/src/css/maplibre-gl.css
@@ -542,6 +542,7 @@ a.mapboxgl-ctrl-logo.mapboxgl-compact {
         position: relative;
         background-color: #fff;
         border-radius: 12px;
+        box-sizing: content-box;
     }
 
     .maplibregl-ctrl-attrib.maplibregl-compact-show,
