Added a mobile breakpoint for 2 finger message in addition to the hover feature detection

--- a/src/css/maplibre-gl.css
+++ b/src/css/maplibre-gl.css
@@ -946,7 +946,7 @@ a.mapboxgl-ctrl-logo.mapboxgl-compact {
     display: none;
 }
 
-@media (hover: none) {
+@media (hover: none), (max-width: 480px) {
     .maplibregl-cooperative-gesture-screen .maplibregl-desktop-message {
         display: none;
     }
